--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">ITN Decode</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="enter_code">Enter ITN code in field above\n and press button below</string>
+    <string name="button_decode">Extract data</string>
+    <string name="action_settings">About</string>
+    <string name="numberInputHint">1234567890</string>
 </resources>
