--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">ITN Decode</string>
 
-    <string name="enter_code">Enter ITN code in field above\n and press button below</string>
+    <string name="enter_code">"Enter ITN code in field above\n and press button below"</string>
     <string name="button_decode">Extract data</string>
     <string name="action_settings">About</string>
     <string name="numberInputHint">1234567890</string>
+    <string name="correctStringMessage">Press button below</string>
+    <string name="checkControlDigit">"Please check your input\n Control symbol value is %d"</string>
+    <string name="incorrectNumberFormat">Valid number must contain ten digits</string>
 </resources>
