--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">About</string>
     <string name="numberInputHint">1234567890</string>
     <string name="correctStringMessage">Press button below</string>
-    <string name="checkControlDigit">"Please check your input\n Control symbol value is %d"</string>
+    <string name="checkControlDigit">"Please check your input\n Control symbol value is %1$d"</string>
     <string name="incorrectNumberFormat">Valid number must contain ten digits</string>
+    <string name="itn_data_message">"Date of birth is %1$tm.%1$td.%1$tY\nDetected sex: %2$s"</string>
 </resources>
