--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,10 @@
     <string name="button_decode">Extract data</string>
     <string name="action_settings">About</string>
     <string name="numberInputHint">1234567890</string>
-    <string name="correctStringMessage">Press button below</string>
     <string name="checkControlDigit">"Please check your input\n Control symbol value is %1$d"</string>
     <string name="incorrectNumberFormat">Valid number must contain ten digits</string>
     <string name="itn_data_message">"Date of birth is %1$tm.%1$td.%1$tY\nDetected sex: %2$s"</string>
     <string name="title_activity_about">About</string>
 
-    <string name="about">Simple app for quux at ukr dot net developer portfolio</string>
+    <string name="about">ITN Decode v.0.1</string>
 </resources>
